--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.9.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "expo": "^49.0.16",
@@ -16,6 +17,8 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-safe-area-context": "^4.7.3",
+    "react-native-screens": "^3.26.0",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
