--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@react-navigation/native-stack": "^6.9.15",
+    "@shopify/flash-list": "^1.6.2",
+    "@tanstack/react-query": "^5.0.0",
+    "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "expo": "^49.0.16",
